--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     <!-- custom links starts -->
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <!-- <link href="assets/img/favicon.png" rel="icon" /> -->
+    <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" /> -->
 
     <!-- Google Fonts -->
     <link
