--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
       href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
+    <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link
       href="assets/vendor/glightbox/css/glightbox.min.css"
       rel="stylesheet"
