--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <!-- <meta name="theme-color" content="#000000" /> -->
+  <meta name="description"
+    content="Bhagirath BVM Grand: Your trusted partner in international trade. We connect you with a world of products, ensuring excellence & quality. Explore, expand, & excel with our reliable solutions. Together, let's shape the future of global trade." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!-- Google Fonts -->
@@ -24,7 +25,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet" />
   <!-- custom links ends   -->
-  <title>React App</title>
+  <title>Bhagirath BVM Grand (HK)</title>
 </head>
 
 <body>
